add option to show Random books with cline
